1226 Fix tests in AccidentStatementIntegrationTest